--- a/src/components/book-form/book-form.css
+++ b/src/components/book-form/book-form.css
@@ -12,11 +12,11 @@
 
 .image-header-container {
     position: absolute;
-    top: -20px;
+    top: -25px;
     left: 50%;
     width: 50px;
     height: 50px;
-    margin-left: -20px;
+    margin-left: -25px;
     border-radius: 50%;
     border: 3px solid #ccc;
     background-color: #F0F2F4;
