--- a/src/components/review/review.css
+++ b/src/components/review/review.css
@@ -8,11 +8,11 @@
 
 .review-image-header-container {
     position: absolute;
-    top: -20px;
+    top: -25px;
     left: 50%;
     width: 50px;
     height: 50px;
-    margin-left: -20px;
+    margin-left: -25px;
     border: 3px solid #ccc;
     border-radius: 50%;
     background-color: #F0F2F4;
